--- a/assets/styles/scss/sections/faq.scss
+++ b/assets/styles/scss/sections/faq.scss
@@ -25,6 +25,7 @@
     justify-content: space-around;
     z-index: 1;
     gap: 100px;
+    width: 100%;
 
     @include md {
       gap: 100px;
@@ -145,11 +146,11 @@
 
     details {
       display: flex;
-      max-width: 1004px;
+      width: 1004px;
       transition: 0.2s ease-in-out;
 
       @include lg {
-        max-width: 953px;
+        width: 800px;
       }
 
       @include md {
@@ -187,6 +188,7 @@
 
         @include lg {
           min-height: 80px;
+          max-width: 756px;
           padding: 0 40px 0 20px;
         }
 
@@ -247,26 +249,27 @@
 
       p {
         margin: 33px auto 0;
-        max-width: 800px;
+        width: 800px;
+        width: 100%;
 
         @include lg {
           margin: 25px auto 0;
-          max-width: 600px;
+          width: 600px;
         }
 
         @include md {
           margin: 20px auto 0;
-          max-width: 308px;
+          width: 308px;
         }
 
         @include sm {
           margin: 20px auto 0;
-          max-width: 308px;
+          width: 308px;
         }
 
         @include xs {
           margin: 17px auto 0;
-          max-width: 230px;
+          width: 230px;
         }
       }
     }
@@ -445,6 +448,8 @@
   }
 
   &__questions-summary {
+    overflow: auto;
+
     @include md {
       font-size: 12px;
     }
